--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 
+<head>
+    <title> Alura Pluss</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+ <section class="principal container">
+    <h1> Com combo+ voce pode aproveitar a Alura+ e o Alura Lingua por um preço unico</h1>
+    <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua"
+ </section>
+    
+</body>
+</html>
