--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
  <section class="principal container">
     <h1> Com combo+ voce pode aproveitar a Alura+ e o Alura Lingua por um preço unico</h1>
-    <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua"
+    <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua">
+    <a href="www.alura.com.br" class="container_botao">Assrinale por 12x de R$ 120,00*</a
  </section>
     
 </body>
