--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <h1> Com combo+ voce pode aproveitar a Alura+ e o Alura Lingua por um preço unico</h1>
     <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua">
     <a href="www.alura.com.br" class="container_botao">Assrinale por 12x de R$ 120,00*</a
+    <a href="www.alura.com.br" class="container_botao botao_secundario"> Assinar somente o Alura+</a>
+    <p class="container_aviso">"O preço pode variar caso a assinatura seja feita em outros planos."</p>
  </section>
     
 </body>
