--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com"crossorgin>
+    <link ref="https://fonts.gooleapis.com/css2?family=inter:wght@400;700display=swap"ref=stylesheet>
 </head>
 
 <body>
