--- a/index.html
+++ b/index.html
@@ -13,12 +13,31 @@
 
 <body>
  <section class="principal container">
+    <div class="container__caixa">
     <h1> Com combo+ voce pode aproveitar a Alura+ e o Alura Lingua por um preço unico</h1>
     <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua">
     <a href="www.alura.com.br" class="container_botao">Assrinale por 12x de R$ 120,00*</a
     <a href="www.alura.com.br" class="container_botao botao_secundario"> Assinar somente o Alura+</a>
     <p class="container_aviso">"O preço pode variar caso a assinatura seja feita em outros planos."</p>
+    </div>
  </section>
     
+
+<section class="container secundario">
+    <img src="img/Plataforma.png"alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+    <div class="container__descricao">
+        <h2 class="descricao__titulo">Assista do seu jeito</h2>
+        <p class="descricao__texto">Aproveite a tela grande na TV ou assista no tablet, laptop, celular, e outros aparelhos.Nossa seleção de cursos não para de crescer.</p>
+    </div>
+</section>
+
+
+<section class="container secundario">
+    <div class="container__descricao">
+        <p class="descricao__texto">
+           Só o combo+ oferece Alura+ e Alura Lingua juntos para vocẽ ter acesso a cursos de diversas áreas da tecnologia e aprender ingles ou espanhol,onde e como quiser
+    </div>
 </body>
 </html>
+
+
