--- a/index.html
+++ b/index.html
@@ -1,43 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
+ 
 <head>
-    <title> Alura Pluss</title>
+    <title>Alura Pluss</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com"crossorgin>
-    <link ref="https://fonts.gooleapis.com/css2?family=inter:wght@400;700display=swap"ref=stylesheet>
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorgin>
+    <link rel="https://fonts.googleapis.com/css2?family=Inter:wght@400;700display=swap&quot; rel="stylesheet">
 </head>
 
 <body>
- <section class="principal container">
-    <div class="container__caixa">
-    <h1> Com combo+ voce pode aproveitar a Alura+ e o Alura Lingua por um preço unico</h1>
-    <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Lingua">
-    <a href="www.alura.com.br" class="container_botao">Assrinale por 12x de R$ 120,00*</a
-    <a href="www.alura.com.br" class="container_botao botao_secundario"> Assinar somente o Alura+</a>
-    <p class="container_aviso">"O preço pode variar caso a assinatura seja feita em outros planos."</p>
-    </div>
- </section>
-    
-
-<section class="container secundario">
-    <img src="img/Plataforma.png"alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
-    <div class="container__descricao">
-        <h2 class="descricao__titulo">Assista do seu jeito</h2>
-        <p class="descricao__texto">Aproveite a tela grande na TV ou assista no tablet, laptop, celular, e outros aparelhos.Nossa seleção de cursos não para de crescer.</p>
-    </div>
-</section>
+    <section class="principal container">
+        <div class="container__caixa">
+        <h1>Com o combo+ você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="Combo.png" alt="O combo+ é a junção do Alura+ e o Alura língua">
+        <a href="www.alura.com.br&quot; class="container__botao">Assine por 12x de R$ 120,00*</a>
+        <a href="www.alura.com.br&quot; class="container__botao botao_secundario">Assinar somente o Alura+</a>
+        <p class="container__aviso">"O preço pode variar  caso a assinatura seja feita em outros planos."</p>
+        </div>
+    </section>
 
 
-<section class="container secundario">
-    <div class="container__descricao">
-        <p class="descricao__texto">
-           Só o combo+ oferece Alura+ e Alura Lingua juntos para vocẽ ter acesso a cursos de diversas áreas da tecnologia e aprender ingles ou espanhol,onde e como quiser
-    </div>
+    <section class="container secundario">
+        <img src="Plataforma.png"alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande na TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+   
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">
+                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            </p>
+            <a href="www.alura.com.br&quot; class="container__botao secundario__botao" container>Assine o Combo+</a>
+        </div>
+        <img src="Telas.png" alt="Tela do Alura+ e Alura Língua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos.</h2>
+            <p class="descricao__texto">Baixe e assista quando quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet</p>
+        </div>
+    </section>
+
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo"> Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="tv.png" alt="Ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="computador.png" alt="Ícone de computador">
+                <h3 class="lista__item">Computador</h3>
+            </li>
+            <li>
+                <img src="celular.png" alt="Ícone de celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
