--- a/index.html
+++ b/index.html
@@ -67,8 +67,31 @@
             </li>
         </ul>
     </section>
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape_logo">
+        <ul class="rodape_lista">
+        <li class="lista_link">
+            <a href="#">idioma</a>
+        </li>
+        <li class="lista_link">
+            <a href="#"> dispositivos compativeis</a>
+        </li>
+        <li class="lista_link">
+            <a href="#">contrato de assinatua </a>
+        </li>
+        </li>
+        <li class="lista_link">
+           <a href="#">politica de privacidade</a>
+        </li>
+   </ul>
+   
+
+       </ul>
+    </footer>
+
 </body>
 </html>
+
 
 
 
